[package]
name = "cc_wasm_api"
version = "0.4.7"
edition = "2021"
authors = ["wefcdse"]
description = "Rust lib for CC wasm mod"
repository = "https://github.com/wefcdse/cc_wasm_api"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "minecraft"]

[dependencies]
# rand = "*"

[features]
default = ["coroutine", "eval", "addon"]
addon = ["coroutine", "eval"]
coroutine = []
eval = []
debug = []

[package.metadata.docs.rs]
# features = ["dependent", "build_script"]
all-features = true
# no-default-features = false
rustdoc-args = ["--cfg", "docsrs"]
